// <auto-generated />
using System;
using KnowledgeBase.Core.Persistence;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;

#nullable disable

namespace KnowledgeBase.Core.Persistence.Migrations
{
    [DbContext(typeof(KnowledgeBaseDbContext))]
    [Migration("20260911124841_AddTagParents")]
    partial class AddTagParents
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "8.0.31")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("KnowledgeBase.Core.Persistence.AssetRecord", b =>
                {
                    b.Property<string>("Id")
                        .HasMaxLength(32)
                        .HasColumnType("character varying(32)");

                    b.Property<string>("ContentType")
                        .IsRequired()
                        .HasMaxLength(255)
                        .HasColumnType("character varying(255)");

                    b.Property<string>("OriginalFileName")
                        .IsRequired()
                        .HasMaxLength(255)
                        .HasColumnType("character varying(255)");

                    b.Property<long>("SizeBytes")
                        .HasColumnType("bigint");

                    b.Property<string>("StoredFileName")
                        .IsRequired()
                        .HasMaxLength(64)
                        .HasColumnType("character varying(64)");

                    b.Property<DateTime>("UploadedAtUtc")
                        .HasColumnType("timestamp with time zone");

                    b.HasKey("Id");

                    b.HasIndex("StoredFileName")
                        .IsUnique();

                    b.ToTable("Assets");
                });

            modelBuilder.Entity("KnowledgeBase.Core.Persistence.Note", b =>
                {
                    b.Property<string>("Id")
                        .HasMaxLength(32)
                        .HasColumnType("character varying(32)");

                    b.Property<string>("Body")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<DateTime>("CreatedAtUtc")
                        .HasColumnType("timestamp with time zone");

                    b.Property<DateTime?>("DeletedAtUtc")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("Kind")
                        .IsRequired()
                        .HasMaxLength(16)
                        .HasColumnType("character varying(16)");

                    b.Property<string>("SourceAssetId")
                        .HasMaxLength(32)
                        .HasColumnType("character varying(32)");

                    b.Property<string>("SourceFileName")
                        .HasMaxLength(255)
                        .HasColumnType("character varying(255)");

                    b.Property<string>("SynthesisGroup")
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)");

                    b.Property<string>("Title")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("character varying(200)");

                    b.Property<DateTime>("UpdatedAtUtc")
                        .HasColumnType("timestamp with time zone");

                    b.HasKey("Id");

                    b.HasIndex("SourceAssetId");

                    b.HasIndex("Title")
                        .IsUnique()
                        .HasFilter("\"DeletedAtUtc\" IS NULL");

                    b.HasIndex("Kind", "SynthesisGroup")
                        .IsUnique()
                        .HasFilter("\"SynthesisGroup\" IS NOT NULL AND \"DeletedAtUtc\" IS NULL");

                    b.ToTable("Notes");
                });

            modelBuilder.Entity("KnowledgeBase.Core.Persistence.NoteLink", b =>
                {
                    b.Property<string>("Id")
                        .HasMaxLength(32)
                        .HasColumnType("character varying(32)");

                    b.Property<string>("SourceNoteId")
                        .IsRequired()
                        .HasMaxLength(32)
                        .HasColumnType("character varying(32)");

                    b.Property<string>("TargetNoteId")
                        .HasMaxLength(32)
                        .HasColumnType("character varying(32)");

                    b.Property<string>("TargetTitle")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("character varying(200)");

                    b.HasKey("Id");

                    b.HasIndex("TargetNoteId");

                    b.HasIndex("TargetTitle");

                    b.HasIndex("SourceNoteId", "TargetTitle")
                        .IsUnique();

                    b.ToTable("NoteLinks");
                });

            modelBuilder.Entity("KnowledgeBase.Core.Persistence.NoteTag", b =>
                {
                    b.Property<string>("NoteId")
                        .HasMaxLength(32)
                        .HasColumnType("character varying(32)");

                    b.Property<string>("TagId")
                        .HasMaxLength(32)
                        .HasColumnType("character varying(32)");

                    b.Property<int>("Ordinal")
                        .HasColumnType("integer");

                    b.HasKey("NoteId", "TagId");

                    b.HasIndex("TagId");

                    b.ToTable("NoteTags");
                });

            modelBuilder.Entity("KnowledgeBase.Core.Persistence.ProcessingJob", b =>
                {
                    b.Property<string>("Id")
                        .HasMaxLength(32)
                        .HasColumnType("character varying(32)");

                    b.Property<string>("AssetId")
                        .HasMaxLength(32)
                        .HasColumnType("character varying(32)");

                    b.Property<int>("Attempts")
                        .HasColumnType("integer");

                    b.Property<DateTime?>("CompletedAtUtc")
                        .HasColumnType("timestamp with time zone");

                    b.Property<DateTime>("CreatedAtUtc")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("Error")
                        .HasMaxLength(2000)
                        .HasColumnType("character varying(2000)");

                    b.Property<string>("Kind")
                        .IsRequired()
                        .HasMaxLength(32)
                        .HasColumnType("character varying(32)");

                    b.Property<string>("Payload")
                        .HasColumnType("text");

                    b.Property<DateTime?>("StartedAtUtc")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasMaxLength(16)
                        .HasColumnType("character varying(16)");

                    b.HasKey("Id");

                    b.HasIndex("AssetId")
                        .IsUnique()
                        .HasFilter("\"AssetId\" IS NOT NULL");

                    b.HasIndex("Status", "CreatedAtUtc");

                    b.ToTable("ProcessingJobs");
                });

            modelBuilder.Entity("KnowledgeBase.Core.Persistence.SynthesisSource", b =>
                {
                    b.Property<string>("SynthesisNoteId")
                        .HasMaxLength(32)
                        .HasColumnType("character varying(32)");

                    b.Property<string>("InputNoteId")
                        .HasMaxLength(32)
                        .HasColumnType("character varying(32)");

                    b.HasKey("SynthesisNoteId", "InputNoteId");

                    b.HasIndex("InputNoteId");

                    b.ToTable("SynthesisSources");
                });

            modelBuilder.Entity("KnowledgeBase.Core.Persistence.Tag", b =>
                {
                    b.Property<string>("Id")
                        .HasMaxLength(32)
                        .HasColumnType("character varying(32)");

                    b.Property<bool>("Confirmed")
                        .HasColumnType("boolean");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)");

                    b.Property<string>("SuggestedMergeIntoId")
                        .HasMaxLength(32)
                        .HasColumnType("character varying(32)");

                    b.HasKey("Id");

                    b.HasIndex("Name")
                        .IsUnique();

                    b.HasIndex("SuggestedMergeIntoId");

                    b.ToTable("Tags");
                });

            modelBuilder.Entity("KnowledgeBase.Core.Persistence.TagParent", b =>
                {
                    b.Property<string>("ChildId")
                        .HasMaxLength(32)
                        .HasColumnType("character varying(32)");

                    b.Property<string>("ParentId")
                        .HasMaxLength(32)
                        .HasColumnType("character varying(32)");

                    b.HasKey("ChildId", "ParentId");

                    b.HasIndex("ParentId");

                    b.ToTable("TagParents");
                });

            modelBuilder.Entity("Microsoft.AspNetCore.DataProtection.EntityFrameworkCore.DataProtectionKey", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("FriendlyName")
                        .HasColumnType("text");

                    b.Property<string>("Xml")
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.ToTable("DataProtectionKeys");
                });

            modelBuilder.Entity("KnowledgeBase.Core.Persistence.Note", b =>
                {
                    b.HasOne("KnowledgeBase.Core.Persistence.AssetRecord", null)
                        .WithMany()
                        .HasForeignKey("SourceAssetId")
                        .OnDelete(DeleteBehavior.SetNull);
                });

            modelBuilder.Entity("KnowledgeBase.Core.Persistence.NoteLink", b =>
                {
                    b.HasOne("KnowledgeBase.Core.Persistence.Note", null)
                        .WithMany()
                        .HasForeignKey("SourceNoteId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("KnowledgeBase.Core.Persistence.Note", null)
                        .WithMany()
                        .HasForeignKey("TargetNoteId")
                        .OnDelete(DeleteBehavior.SetNull);
                });

            modelBuilder.Entity("KnowledgeBase.Core.Persistence.NoteTag", b =>
                {
                    b.HasOne("KnowledgeBase.Core.Persistence.Note", null)
                        .WithMany()
                        .HasForeignKey("NoteId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("KnowledgeBase.Core.Persistence.Tag", null)
                        .WithMany()
                        .HasForeignKey("TagId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("KnowledgeBase.Core.Persistence.ProcessingJob", b =>
                {
                    b.HasOne("KnowledgeBase.Core.Persistence.AssetRecord", null)
                        .WithMany()
                        .HasForeignKey("AssetId")
                        .OnDelete(DeleteBehavior.Cascade);
                });

            modelBuilder.Entity("KnowledgeBase.Core.Persistence.SynthesisSource", b =>
                {
                    b.HasOne("KnowledgeBase.Core.Persistence.Note", null)
                        .WithMany()
                        .HasForeignKey("InputNoteId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("KnowledgeBase.Core.Persistence.Note", null)
                        .WithMany()
                        .HasForeignKey("SynthesisNoteId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("KnowledgeBase.Core.Persistence.Tag", b =>
                {
                    b.HasOne("KnowledgeBase.Core.Persistence.Tag", null)
                        .WithMany()
                        .HasForeignKey("SuggestedMergeIntoId")
                        .OnDelete(DeleteBehavior.SetNull);
                });

            modelBuilder.Entity("KnowledgeBase.Core.Persistence.TagParent", b =>
                {
                    b.HasOne("KnowledgeBase.Core.Persistence.Tag", null)
                        .WithMany()
                        .HasForeignKey("ChildId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("KnowledgeBase.Core.Persistence.Tag", null)
                        .WithMany()
                        .HasForeignKey("ParentId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });
#pragma warning restore 612, 618
        }
    }
}
